# programmiersprachen-aufgabe-1

TDD/source/: CMakeLists.txt  aufgabe1-10.cpp  aufgabe1-11.cpp  aufgabe1-12.cpp  aufgabe1-13.cpp  aufgabe1-14.cpp  aufgabe1-8.cpp  aufgabe1-9.cpp
source/: CMakeLists.txt  aufgabe1-3.cpp  mile_to_kilometer.cpp  tests.cpp
text/: aufgabe1-16-Glossary.txt  aufgabe1-4&5.txt  aufgabe1-4.txt  aufgabe1-5&6.txt  aufgabe1-7.txt
